--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,34 +45,43 @@ body {
     border-style:solid;
     border-width: 3px;
     border-color: lightblue;
-    border-radius: 3px;
-    padding: 3px;
+    font-size: medium;
+    float: right;
+    padding:2px;
     text-align: right
+    
+
+    
 
     }
     
 
 
 .header h3 {
+    margin: 0px 10px;
     display: inline-block;
+
 }
 
 
   .header h4 {
+    margin: 0px 10px;
     display: inline-block;
+   
 }
 
 
 
 
 .header h4 {
-    display:inline-block;
+    
     font-size: medium;
+    float: right;
     word-spacing: 70x;
     border-style:solid;
     border-width: 3px;
     border-color: lightblue;
-    padding: 1px;
+    padding: 2px;
     text-align: center;
 }
 
@@ -80,17 +89,20 @@ body {
 
 .header h5 {
     display: inline-block;
+    margin: 0px 10px;
+    
 }
 
 
 .header h5 {
-    display:inline-block;
+    
     font-size: medium;
+    float: right;
     word-spacing: 70x;
     border-style:solid;
     border-width: 3px;
     border-color: lightblue;
-    padding: 1px;
+    padding: 2px;
     text-align: right;
 }
 
