--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@ body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #bcd8d4;
+
 }
 
 .header h1 {
@@ -43,12 +44,12 @@ body {
 .header h3 {
     word-spacing: 70x;
     border-style:solid;
-    border-width: 3px;
+    border-width: 5px;
     border-color: lightblue;
-    font-size: medium;
-    float: right;
-    padding:2px;
-    text-align: right
+    font-size: 30px;
+    float: top;
+    padding:5px;
+    text-align: center;
     
 
     
@@ -75,13 +76,13 @@ body {
 
 .header h4 {
     
-    font-size: medium;
-    float: right;
+    font-size: 30px;
+    float: top;
     word-spacing: 70x;
     border-style:solid;
-    border-width: 3px;
+    border-width: 5px;
     border-color: lightblue;
-    padding: 2px;
+    padding: 5px;
     text-align: center;
 }
 
@@ -96,14 +97,13 @@ body {
 
 .header h5 {
     
-    font-size: medium;
-    float: right;
+    font-size: 30px;
+    float: top;
     word-spacing: 70x;
     border-style:solid;
-    border-width: 3px;
+    border-width: 5px;
     border-color: lightblue;
-    padding: 2px;
-    text-align: right;
+    padding: 5px;
 }
 
 
