--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,7 @@ body {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
-    color: #bcd8d4;
-
+    color: #ffffff;
 }
 
 .header h1 {
@@ -24,108 +23,6 @@ body {
 .header h1 .seo {
     color: #d9dcd6;
 }
-
-    
-    
-
-.header h2 .seo {
-    color: #d9dcd6;
-    
-}
-
-
-.header h2 {
-    display: inline-block;
-    font-size: 25px;
-    
-}
-
-
-.header h3 {
-    word-spacing: 70x;
-    border-style:solid;
-    border-width: 5px;
-    border-color: lightblue;
-    font-size: 30px;
-    float: top;
-    padding:5px;
-    text-align: center;
-    
-
-    
-
-    }
-    
-
-
-.header h3 {
-    margin: 0px 10px;
-    display: inline-block;
-
-}
-
-
-  .header h4 {
-    margin: 0px 10px;
-    display: inline-block;
-   
-}
-
-
-
-
-.header h4 {
-    
-    font-size: 30px;
-    float: top;
-    word-spacing: 70x;
-    border-style:solid;
-    border-width: 5px;
-    border-color: lightblue;
-    padding: 5px;
-    text-align: center;
-}
-
-
-
-.header h5 {
-    display: inline-block;
-    margin: 0px 10px;
-    
-}
-
-
-.header h5 {
-    
-    font-size: 30px;
-    float: top;
-    word-spacing: 70x;
-    border-style:solid;
-    border-width: 5px;
-    border-color: lightblue;
-    padding: 5px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 .header div {
     padding-top: 15px;
