--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@ body {
 .header h1 {
     display: inline-block;
     font-size: 48px;
+    color: #d9dcd6;
 }
 
 .header h1 .seo {
@@ -32,12 +33,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
-    list-style-type: none;
-}
 
-.header div ul li {
-    display: inline-block;
+
+.header div ul li { 
+    list-style-type: none;         
+    display: inline-block;          /*consolidated ".header div ul " into */
     margin-left: 25px;
 }
 
