--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,17 +141,7 @@ p {
     max-height: 200px;
 }
 
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
+.search-engine-optimization h2+.online-reputation-management h2+.social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -159,10 +149,8 @@ p {
 .footer {
     padding: 30px;
     clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 20px;
+    font-size: 20px;
     text-align: center;
 }
 
-.footer h2 {
-    font-size: 20px;
-}
